--- a/images/npm/Dockerfile
+++ b/images/npm/Dockerfile
@@ -1,4 +1,3 @@
 FROM mhart/alpine-node:6
 LABEL maintainer="Repometric <linterhub@repometric.com>"
-ARG WORKDIR
-WORKDIR $WORKDIR
+ENTRYPOINT /bin/sh
