--- a/images/npm/Dockerfile
+++ b/images/npm/Dockerfile
@@ -1,3 +1,3 @@
 FROM mhart/alpine-node:6
-LABEL maintainer="Repometric <linterhub@repometric.com>"
+LABEL maintainer="linterhub@repometric.com"
 ENTRYPOINT /bin/sh
